force-app/main/default/objects/AgriFarmer__c/AgriFarmer__c.object-meta.xml
<CustomObject>
    <label>AgriFarmer</label>
    <nameField>
        <label>Farmer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgriFarmers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>