force-app/main/default/objects/AgriFarmer__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <length>28</length>
    <type>Text</type>
</CustomField>