force-app/main/default/objects/AgriFarmer__c/fields/Earned__c.field-meta.xml
<CustomField>
    <fullName>Earned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>