force-app/main/default/objects/AgriFarmer__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email2</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>