force-app/main/default/objects/AgriFarmer__c/fields/Final_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Final_Expenditure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Final Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>