force-app/main/default/objects/AgriFarmer__c/fields/Phone_Region__c.field-meta.xml
<CustomField>
    <fullName>Phone_Region__c</fullName>
    <label>Phone Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>